color and lunch screen

--- a/Bill Share/Base.lproj/Main.storyboard
+++ b/Bill Share/Base.lproj/Main.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="b6j-6G-sgE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="b6j-6G-sgE">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,7 +18,6 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Bill:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgr-DO-2bi">
                                 <rect key="frame" x="20" y="105" width="100" height="34"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="g72-hn-8Lz"/>
                                     <constraint firstAttribute="width" constant="100" id="xt8-Vd-1pU"/>
@@ -28,9 +26,8 @@
                                 <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total Bill Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6PB-xq-RQV">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total Bill Amount" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="6PB-xq-RQV">
                                 <rect key="frame" x="20" y="154" width="560" height="30"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7Zs-sS-gOm"/>
                                 </constraints>
@@ -43,54 +40,40 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip % :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVN-gz-rWE">
-                                <rect key="frame" x="20" y="198" width="100" height="39"/>
-                                <animations/>
+                                <rect key="frame" x="20" y="198" width="87" height="39"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="Rkc-KY-SJM"/>
-                                    <constraint firstAttribute="width" constant="100" id="mdI-Qg-Kds"/>
+                                    <constraint firstAttribute="width" constant="87" id="mdI-Qg-Kds"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="24"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
                                 <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S08-w2-vhj">
                                 <rect key="frame" x="20" y="257" width="560" height="37"/>
-                                <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.99821335079999995" blue="0.98068815470000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="Vyv-UR-i0d"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="24"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
                                 <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" red="0.060210965569999997" green="0.12061292680000001" blue="0.17466744779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="shadowColor" red="0.93406635520000003" green="0.95650917290000004" blue="0.085167460139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Split 1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTs-ZE-a95">
-                                <rect key="frame" x="20" y="306" width="61.5" height="39"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="39" id="8XG-7e-MzX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="24"/>
-                                <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yp4-9e-ehf">
                                 <rect key="frame" x="20" y="358" width="560" height="37"/>
-                                <animations/>
                                 <color key="backgroundColor" red="0.91433447599999995" green="0.43756234649999998" blue="0.32277661559999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="Uhp-cQ-nOH"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="24"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
                                 <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" red="0.060210965569999997" green="0.12061292680000001" blue="0.17466744779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="shadowColor" red="0.93406635520000003" green="0.95650917290000004" blue="0.085167460139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Calculator" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLy-Jb-bbB">
                                 <rect key="frame" x="20" y="35" width="560" height="62"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="62" id="MUj-Nt-7bn"/>
                                 </constraints>
@@ -98,9 +81,8 @@
                                 <color key="textColor" red="0.70132004309999996" green="0.0" blue="0.0" alpha="0.85330784569999996" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="R40-Vb-mtw">
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="R40-Vb-mtw">
                                 <rect key="frame" x="113" y="315" width="469" height="31"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="sEb-Ee-E6f"/>
                                 </constraints>
@@ -108,9 +90,8 @@
                                     <action selector="noOfPersonValueChanged:" destination="b6j-6G-sgE" eventType="valueChanged" id="1sZ-Iq-mhY"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.14999999999999999" minValue="0.0" maxValue="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="g0o-2T-wGh">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="g0o-2T-wGh">
                                 <rect key="frame" x="113" y="203" width="469" height="31"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="wyA-uz-LEg"/>
                                 </constraints>
@@ -118,23 +99,31 @@
                                     <action selector="TipPercentageSliderValueChanged:" destination="b6j-6G-sgE" eventType="valueChanged" id="ewa-om-7CN"/>
                                 </connections>
                             </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Split 1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTs-ZE-a95">
+                                <rect key="frame" x="20" y="306" width="71.5" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="8XG-7e-MzX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
+                                <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.73725490196078436" green="0.96078431372549022" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="R40-Vb-mtw" secondAttribute="trailing" constant="20" id="00x-ca-aey"/>
                             <constraint firstAttribute="trailing" secondItem="6PB-xq-RQV" secondAttribute="trailing" constant="20" id="0ng-Np-e31"/>
                             <constraint firstAttribute="trailing" secondItem="g0o-2T-wGh" secondAttribute="trailing" constant="20" id="1AH-Vz-F2H"/>
                             <constraint firstAttribute="trailing" secondItem="iLy-Jb-bbB" secondAttribute="trailing" constant="20" id="2zc-bj-mG1"/>
                             <constraint firstItem="iLy-Jb-bbB" firstAttribute="leading" secondItem="GoN-tD-GOV" secondAttribute="leading" constant="20" id="531-uV-Q1s"/>
-                            <constraint firstItem="g0o-2T-wGh" firstAttribute="leading" secondItem="EVN-gz-rWE" secondAttribute="trailing" constant="-5" id="6GL-zy-qph"/>
+                            <constraint firstItem="g0o-2T-wGh" firstAttribute="leading" secondItem="EVN-gz-rWE" secondAttribute="trailing" constant="8" id="6GL-zy-qph"/>
                             <constraint firstItem="g0o-2T-wGh" firstAttribute="top" secondItem="6PB-xq-RQV" secondAttribute="bottom" constant="19" id="73T-XX-bg5"/>
                             <constraint firstItem="iLy-Jb-bbB" firstAttribute="top" secondItem="vkN-ho-4Ub" secondAttribute="bottom" constant="15" id="C9X-8F-naN"/>
                             <constraint firstItem="S08-w2-vhj" firstAttribute="leading" secondItem="GoN-tD-GOV" secondAttribute="leading" constant="20" id="E0l-1v-nGo"/>
                             <constraint firstAttribute="trailing" secondItem="yp4-9e-ehf" secondAttribute="trailing" constant="20" id="GIV-Rd-wn0"/>
                             <constraint firstAttribute="trailing" secondItem="S08-w2-vhj" secondAttribute="trailing" constant="20" id="GaL-hd-Irr"/>
                             <constraint firstItem="yp4-9e-ehf" firstAttribute="leading" secondItem="GoN-tD-GOV" secondAttribute="leading" constant="20" id="GxH-BI-b2J"/>
-                            <constraint firstItem="R40-Vb-mtw" firstAttribute="leading" secondItem="yTs-ZE-a95" secondAttribute="trailing" constant="33.5" id="R78-BX-ThZ"/>
+                            <constraint firstItem="R40-Vb-mtw" firstAttribute="leading" secondItem="yTs-ZE-a95" secondAttribute="trailing" constant="23.5" id="R78-BX-ThZ"/>
                             <constraint firstItem="yp4-9e-ehf" firstAttribute="top" secondItem="R40-Vb-mtw" secondAttribute="bottom" constant="13" id="RuW-wq-YKw"/>
                             <constraint firstItem="EVN-gz-rWE" firstAttribute="leading" secondItem="GoN-tD-GOV" secondAttribute="leading" constant="20" id="ShN-sU-aBC"/>
                             <constraint firstItem="Sgr-DO-2bi" firstAttribute="leading" secondItem="GoN-tD-GOV" secondAttribute="leading" constant="20" id="WYG-Xp-ce7"/>
@@ -160,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p2D-9v-1yI" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="347" y="90"/>
+            <point key="canvasLocation" x="208" y="25"/>
         </scene>
     </scenes>
 </document>
