--- a/Bill Share/Base.lproj/Main.storyboard
+++ b/Bill Share/Base.lproj/Main.storyboard
@@ -26,19 +26,6 @@
                                 <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total Bill Amount" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="6PB-xq-RQV">
-                                <rect key="frame" x="20" y="154" width="560" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="7Zs-sS-gOm"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
-                                <connections>
-                                    <action selector="txtAmoutValueChanged:" destination="b6j-6G-sgE" eventType="valueChanged" id="E4E-bj-cdl"/>
-                                    <action selector="txtAmoutValueChanged:" destination="b6j-6G-sgE" eventType="editingChanged" id="leC-1W-gsm"/>
-                                    <outlet property="delegate" destination="b6j-6G-sgE" id="oCf-gH-794"/>
-                                </connections>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip % :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVN-gz-rWE">
                                 <rect key="frame" x="20" y="198" width="87" height="39"/>
                                 <constraints>
@@ -51,7 +38,7 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S08-w2-vhj">
                                 <rect key="frame" x="20" y="257" width="560" height="37"/>
-                                <color key="backgroundColor" red="0.0" green="0.99821335079999995" blue="0.98068815470000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.011801943182945251" green="0.95004206895828247" blue="0.99016135931015015" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="Vyv-UR-i0d"/>
                                 </constraints>
@@ -60,9 +47,18 @@
                                 <color key="highlightedColor" red="0.060210965569999997" green="0.12061292680000001" blue="0.17466744779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="shadowColor" red="0.93406635520000003" green="0.95650917290000004" blue="0.085167460139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Split 1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTs-ZE-a95">
+                                <rect key="frame" x="20" y="306" width="71.5" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="8XG-7e-MzX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
+                                <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yp4-9e-ehf">
                                 <rect key="frame" x="20" y="358" width="560" height="37"/>
-                                <color key="backgroundColor" red="0.91433447599999995" green="0.43756234649999998" blue="0.32277661559999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.9102628231048584" green="0.42225733399391174" blue="0.50896191596984863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="Uhp-cQ-nOH"/>
                                 </constraints>
@@ -71,7 +67,7 @@
                                 <color key="highlightedColor" red="0.060210965569999997" green="0.12061292680000001" blue="0.17466744779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="shadowColor" red="0.93406635520000003" green="0.95650917290000004" blue="0.085167460139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Calculator" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLy-Jb-bbB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share Bill" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLy-Jb-bbB">
                                 <rect key="frame" x="20" y="35" width="560" height="62"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -99,15 +95,19 @@
                                     <action selector="TipPercentageSliderValueChanged:" destination="b6j-6G-sgE" eventType="valueChanged" id="ewa-om-7CN"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Split 1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTs-ZE-a95">
-                                <rect key="frame" x="20" y="306" width="71.5" height="39"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total Bill Amount" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="6PB-xq-RQV">
+                                <rect key="frame" x="20" y="154" width="560" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="39" id="8XG-7e-MzX"/>
+                                    <constraint firstAttribute="height" constant="30" id="7Zs-sS-gOm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
-                                <color key="textColor" red="0.22187063100000001" green="0.1019253656" blue="0.048490159210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="txtAmoutValueChanged:" destination="b6j-6G-sgE" eventType="valueChanged" id="E4E-bj-cdl"/>
+                                    <action selector="txtAmoutValueChanged:" destination="b6j-6G-sgE" eventType="editingChanged" id="leC-1W-gsm"/>
+                                    <outlet property="delegate" destination="b6j-6G-sgE" id="oCf-gH-794"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.73725490196078436" green="0.96078431372549022" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -149,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p2D-9v-1yI" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="208" y="25"/>
+            <point key="canvasLocation" x="40" y="6"/>
         </scene>
     </scenes>
 </document>
